2011-04-20 Johannes Erdmann <johannes.erdmann@cern.ch>

	* make minimization method in Fitter configurable

2011-04-20 Johannes Erdmann <johannes.erdmann@cern.ch>

	* some small updates for the new b-tagging options
	* tag KLFitter-00-04-05

2011-04-20 Stefan Guindon <stefan.guindon@cern.ch>

	* updated b-tagging to make sure no tops in loop over partons
	* made b-tagging now enum, selecting which option to use
	* added b-tagging option for working point with changeable efficiency and rejection rates
	* tag KLFitter-00-04-04

2011-04-20 Johannes Erdmann <johannes.erdmann@cern.ch>

	* Makefile updates for MAC
	* Adding cmt directory and preparecmt.sh script
	* tag KLFitter-00-04-03
	
2011-04-05 Johannes Erdmann <johannes.erdmann@cern.ch>, Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>

	* extras/src/InterfaceRoot.cxx: Files in input.txt can also be separated by ',' which is very useful for grid usage
	* Makefile : updates for more convenience
	* tag KLFitter-00-04-02

2011-03-14 Johannes Erdmann <johannes.erdmann@cern.ch> 

	* remove include and src directories 
	* add enums to LikelihoodTopLeptonJets_JetAngles 
	* fix main Makefile 
	* tag KLFitter-00-04-01 
	
2011-03-14 Johannes Erdmann <johannes.erdmann@cern.ch>

	* restructuring the package: making two libraries (library and extras)
	* Makefile clean-up in example/top_ljets
	* tag KLFitter-00-04-00

2011-03-14 Johannes Erdmann <johannes.erdmann@cern.ch>

	* merging back from KLFitter-00-03-42-branch
	* optimize LikelihoodTopLeptonJets (possible by taking out eta and phi parameters for jets)
	* add LikelihoodTopLeptonsJets_JetAngles (which is the old LikelihoodTopLeptonJets)
	* introduce enumerators for lepton type
	* introduce ConvergenceStatus bit word and masks
	* update README
	* clean-up Makefile
	* some clean-up
	* update ExampleCode.C and 
	* tag KLFitter-00-03-43

2011-03-02 Johannes Erdmann <johannes.erdmann@cern.ch>

	* bug fix in Permutations class (photons only)
	* Makefile update