@@ -1,7 +1,8 @@
 2011-04-20 Johannes Erdmann <johannes.erdmann@cern.ch>
 
 	* make minimization method in Fitter configurable
-
+	* changes for the example in top_ljets (print-out in first event)
+	
 2011-04-20 Johannes Erdmann <johannes.erdmann@cern.ch>
 
 	* some small updates for the new b-tagging options
